# policyBoom

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.md
attached_assets/: Pasted--1-WhatsApp-https-www-whatsapp-com-https-www-whatsapp-com--1762195234818_1762195234818.txt  Pasted--App-Name-Website--1762195206179_1762195206179.txt  Pasted--Found-10-policy-documents-Extracting-Legal-Document-https-stripe-com-legal-restricted-bu-1762205701525_1762205701525.txt  Pasted--PRODUCT-INTENT-Given-a-seed-website-URL-the-system-discovers-likely-Terms-of-Service-Privacy--1759970418567_1759970418568.txt  Pasted--https-www-whatsapp-com-https-www-wechat-com-https-www-messenger-com-https--1762195414758_1762195414758.txt  Pasted--venv-vikrammangat-Vikrams-Air-crwlr-uvicorn-app-api-app-host-0-0-0-0-port-8000-reload-INFO-1762127101254_1762127101254.txt  Pasted-Below-is-a-refined-enterprise-ready-set-of-User-Stories-for-your-PolicyBoom-API-pivoting-from-dom-1762193306832_1762193306833.txt  Pasted-NFO-Will-watch-for-changes-in-these-directories-Users-vikrammangat-policyBoom-crwlr-INFO--1762128154498_1762128154498.txt
crwlr/: README.md  requirements.txt
crwlr/app/: analyze.py  api.py  crawler.py  extract.py  storage.py  utils.py
crwlr/static/: index.html  verify.html
crwlr/tests/: test_api.py  test_discovery.py  test_rules.py
crwlr/tests/fixtures/: sample_privacy_chrome.html  sample_privacy_min.html
policyboom/: DEPLOYMENT.md  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
policyboom/.github/workflows/: publish.yml
policyboom/policyboom/: __init__.py  analysis.py  cli.py  database.py  discovery.py  extraction.py  llama_extraction.py  models.py  scanner.py  user_agents.py  utils.py
