[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "fastapi==0.115.0",
    "lxml-html-clean>=0.4.3",
    "lxml==5.3.0",
    "pytest==8.3.3",
    "readability-lxml==0.8.1",
    "requests==2.32.3",
    "tldextract==5.1.2",
    "uvicorn==0.30.6",
    "httpx>=0.28.1",
    "click>=8.3.0",
    "rich>=14.2.0",
    "groq>=0.33.0",
    "llama-stack-client>=0.2.12",
]
